# pyfc

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
pyfc/: api.py  cache.py  config.py  display.py  schemas.py
src/: main.cpp
src/pyfc/: api.py  cache.py  cli.py  config.py  display.py
tests/: conftest.py  test_api.py  test_cache.py  test_cli.py  test_config.py  test_display.py
