[build-system]
requires = ["setuptools >= 68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfc"
version = "0.0.1"
description = "Football match CLI"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
pyfc = "pyfc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]